# docs/swagger.json
@@ -12,6 +12,68 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/account/login": {
+            "post": {
+                "description": "登录平台",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "login",
+                "parameters": [
+                    {
+                        "description": "新增的用户信息",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AccountInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/account/register": {
+            "post": {
+                "description": "注册一个平台用户",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "account"
+                ],
+                "summary": "add a account",
+                "parameters": [
+                    {
+                        "description": "新增的用户信息",
+                        "name": "accountInfo",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.AccountInfo"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/user/addUser": {
             "post": {
                 "description": "测试的接口",
@@ -134,6 +196,20 @@
         }
     },
     "definitions": {
+        "models.AccountInfo": {
+            "type": "object",
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "role": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
